LPS-84677 Use default.xml to define custom SQL

--- a/modules/apps/sample-custom-query/sample-custom-query-service/build.gradle
+++ b/modules/apps/sample-custom-query/sample-custom-query-service/build.gradle
@@ -3,6 +3,7 @@ dependencies {
 	compileOnly group: "com.liferay", name: "com.liferay.osgi.util", version: "3.0.0"
 	compileOnly group: "com.liferay", name: "com.liferay.portal.spring.extender", version: "default"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.kernel", version: "default"
+	compileOnly project(":apps:portal:portal-dao-orm-custom-sql-api")
 	compileOnly project(":apps:sample-custom-query:sample-custom-query-api")
 	compileOnly project(":core:petra:petra-string")
 }
