--- a/modules/apps/users-admin/users-admin-test/build.gradle
+++ b/modules/apps/users-admin/users-admin-test/build.gradle
@@ -4,7 +4,9 @@ dependencies {
 	testIntegrationCompile group: "javax.portlet", name: "portlet-api", version: "3.0.1"
 	testIntegrationCompile project(":apps:export-import:export-import-test-util")
 	testIntegrationCompile project(":apps:portal-configuration:portal-configuration-test-util")
+	testIntegrationCompile project(":apps:portal-search:portal-search")
 	testIntegrationCompile project(":apps:portal-search:portal-search-api")
+	testIntegrationCompile project(":apps:portal-search:portal-search-spi")
 	testIntegrationCompile project(":apps:portal-search:portal-search-test-util")
 	testIntegrationCompile project(":apps:users-admin:users-admin-api")
 	testIntegrationCompile project(":apps:users-admin:users-admin-test-util")
